--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -1,23 +1,12 @@
 .home-row-title {
-  /* border: 1px solid var(--primary-color);  */
-  /* color: var(--secondary-color); */
+  /* border: 1px solid var(--g1-color);  */
+  /* color: var(--b2-color); */
   font: italic;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0px;
-
-  .primary{
-    background-color: var(--g3-color);
-    color: var(--g5-color);
-    transition: background-color 0.5s ease-in-out;
-    transition: box-shadow 0.5s ease-in-out;
-
-    &:hover {
-      background-color: var(--g2-color);
-      box-shadow: var(--shadow-color) 2px 2px 10px;
-    }
-  }
+  margin-bottom: -5px;
+  padding: 0;
 }
 
 .home-row {
@@ -26,7 +15,7 @@
   white-space: nowrap;
   padding: 5px;
   justify-content: space-around;
-  border: 2px solid var(--primary-color);
+  border: 2px solid var(--g1-color);
   border-radius: 1px 1px 7px 7px;
 
   /* &::-webkit-scrollbar {
@@ -34,34 +23,12 @@
   } */
 }
 
-input[type="text"] {
-  border: solid 1px var(--primary-color);
-  padding: 10px;
-  border-radius: 8px;
-  margin-right: 4px;
-  display: inline-block;
-  width: 30%;
-}
-
-button {
-  /* padding: 10px; */
-  border: solid 1px var(--primary-color);
-  background: var(--primary-color);
-  color: white;
-  border-radius: 8px;
-}
-
-.description {
-  margin-top: 10px;
-  font-size: medium;
-  color: var(--g1-color);
-  line-height: 1.4;
-  white-space: normal;
+.add-button {
+  background: var(--g1-color);
 }
 
 /* ============================================================================
-   WORLD COMPONENT STYLES
-   Moved from styles.css - components for world items display
+   HOME COMPONENT STYLES
    ============================================================================ */
 
 /* World Icon Styles */
@@ -110,39 +77,57 @@ button {
 /* World Content Components */
 .world-tags {
   width: fit-content;
-  margin: 3px;
-  padding: 5px;
+  margin: 1px;
+  padding: 3px;
   font-size: x-small;
-  color: var(--secondary-color);
-  border: 1px solid var(--g2-color);
+  font-style: italic;
+  color: var(--b2-color);
+  border: 1px solid var(--g3-color);
   border-radius: 10px;
   transition: box-shadow 0.5s ease-in-out;
   
   &:hover {
-    background: var(--accent-color);
+    background-color: var(--g4-color);
     box-shadow: 2px 2px 5px var(--shadow-color);
   }
 }
 
-.world-description {
+.world-thumbnail {
+  background: var(--g4-color);
+  border-radius: 15px;
+  margin: 5px;
+  padding: 10px;
+  transition: box-shadow 0.5s ease-in-out;
+  
+  &:hover {
+    box-shadow: 2px 2px 15px var(--shadow-color);
+
+    &.event {
+      box-shadow: 2px 2px 5px var(--event-color) !important;
+    }
+
+    &.location {
+      box-shadow: 2px 2px 5px var(--location-color) !important;
+    }
+
+    &.character {
+      box-shadow: 2px 2px 5px var(--character-color) !important;
+    }
+
+    &.story {
+      box-shadow: 2px 2px 5px var(--story-color) !important;
+    }
+  }
+}
+
+
+.thumbnail-description {
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: x-small;
   color: var(--g1-color);
   line-height: 1.4;
   white-space: normal;
-}
-
-.world-thumbnail {
-  background: var(--g4-color);
-  border-radius: 30px;
-  margin: 5px;
-  padding: 10px;
-  transition: box-shadow 0.5s ease-in-out;
-}
-
-.world-thumbnail:hover {
-  box-shadow: 2px 2px 15px var(--shadow-color);
 }
 
 .thumbnail-header {
