--- a/src/app/home/world-character/world-character.css
+++ b/src/app/home/world-character/world-character.css
@@ -5,11 +5,11 @@
 }
 
 .thumbnail-alt-names {
-  font-size: small;
+  font-size: inherit;
   color: var(--g1-color);
 }
 
 .thumbnail-pronouns {
-  font-size: small;
+  font-size: inherit;
   color: var(--g1-color);
 }
