--- a/src/app/home/world-character/world-character.html
+++ b/src/app/home/world-character/world-character.html
@@ -1,10 +1,12 @@
-<div class="character-thumbnail world-thumbnail" [routerLink]="['/character-details', worldCharacter().id]">
+<div class="character-thumbnail world-thumbnail character" [routerLink]="['/character-details', worldCharacter().id]">
     <div class="thumbnail-header">
         <h4 class="thumbnail-title">{{ worldCharacter().firstName }} {{ worldCharacter().lastName }}</h4>
         <button class="thumbnail-delete-button" (click)="deleteCharacter(worldCharacter().id, $event)">Delete</button>
     </div>
-    <p class="thumbnail-alt-names">{{ worldCharacter().altNames.join(', ') }}</p>
-    <p class="thumbnail-pronouns">{{ worldCharacter().pronouns }}</p>
+    <div class="thumbnail-description">
+        <p class="thumbnail-alt-names">{{ worldCharacter().altNames.join(', ') }}</p>
+        <p class="thumbnail-pronouns">{{ worldCharacter().pronouns }}</p>
+    </div>
     <div class="thumbnail-tag-container">
     @for (tag of worldCharacter().tags; track tag) {
         <div class="world-tags">{{ tag }}</div>
