--- a/src/app/home/world-location/world-location.html
+++ b/src/app/home/world-location/world-location.html
@@ -1,12 +1,11 @@
-<div class="location-thumbnail world-thumbnail" [routerLink]="['/location-details', worldLocation().id]">
+<div class="location-thumbnail world-thumbnail location" [routerLink]="['/location-details', worldLocation().id]">
     <div class="thumbnail-header">
         <h4 class="thumbnail-title">{{ worldLocation().name }}</h4>
         <button class="thumbnail-delete-button" (click)="deleteLocation(worldLocation().id, $event)">Delete</button>
     </div>
-    <div class="world-description">{{ worldLocation().description }}</div>
-    <!-- <p class="world-location">{{ worldLocation().location.join(', ') }}</p>
-    <p class="world-characters">{{ worldLocation().characters.join(', ') }}</p>
-    <p class="world-stories">{{ worldLocation().stories.join(', ') }}</p> -->
+    <div class="thumbnail-description">
+        {{ worldLocation().description }}
+    </div>
     <div class="thumbnail-tag-container">
     @for (tag of worldLocation().tags; track tag) {
         <div class="world-tags">{{ tag }}</div>
