--- a/src/styles.css
+++ b/src/styles.css
@@ -21,13 +21,42 @@
   --g4-color: #a4ac86;
   --g5-color: #c2c5aa;
   
-  /* Semantic Color Variables */
-  --primary-color: var(--g1-color);
-  --secondary-color: var(--b2-color);
-  --background-color: var(--b5-color);
-  --accent-color: var(--g4-color);
-  --shadow-color: var(--b1-color);
+  /* Rainbow Palette */
+  --bright-red: #e37b7a;
+  --bright-orange: #f1b75f;
+  --bright-yellow: #faea77;
+  --bright-green: #9dc870;
+  --bright-blue: #67bfce;
+  --bright-purple: #9c83b7;
 
+  --pastel-red: #ebaec7;
+  --pastel-orange: #f4c790;
+  --pastel-yellow: #fff1b3;
+  --pastel-green: #9ccca4;
+  --pastel-blue: #b4dce7;
+  --pastel-purple: #d9c2db;
+
+  /* Semantic Color Variables */
+  --shadow-color: var(--b1-color);
+  --highlight-color: var(--g4-color);
+
+  /* World Colors */
+
+    /* Events */
+    --event-color: var(--bright-blue);
+    --event-highlight-color: var(--pastel-blue);
+    /* Locations */
+    --location-color: var(--bright-green);
+    --location-highlight-color: var(--pastel-green);
+
+    /* Characters */
+    --character-color: var(--bright-orange);
+    --character-highlight-color: var(--pastel-orange);
+
+    /* Stories */
+    --story-color: var(--bright-purple);
+    --story-highlight-color: var(--pastel-purple);
+  
   /* Fonts */
   --base-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   --input-font-family: 'Lucida Console';
@@ -38,7 +67,7 @@
    ============================================================================ */
 * {
   margin: 0;
-  padding: 0;
+  padding: 0; 
 }
 
 body {
@@ -56,7 +85,7 @@ a {
    ============================================================================ */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Be Vietnam Pro', sans-serif;
-  color: var(--primary-color);
+  color: var(--g1-color);
 }
 
 h1 {
@@ -66,7 +95,6 @@ h1 {
 
 h2 {
   margin-top: 10px;
-  /* margin-bottom: 10px; */
 }
 
 .subtitle {
@@ -80,21 +108,51 @@ h2 {
    BUTTON STYLES
    ============================================================================ */
 button{
+  border: none;
   border-radius: 8px;
   padding: 5px;
+  transition: box-shadow 0.5s ease-in-out, background-color 0.5s ease-in-out, color 0.5s ease-in-out;
 
-  .primary {
-    border: solid 1px var(--primary-color);
-    background: var(--primary-color);
-    color: white;
+  &.primary {
+    /* border: solid 1px var(--g1-color); */
+    background: var(--g3-color);
+    color: var(--g5-color);
+
+    &:hover {
+      background-color: var(--g4-color);
+      color: var(--g2-color);
+    }
   }
 
-  .secondary {
-    border: solid 1px var(--secondary-color);
-    background: var(--secondary-color);
-    color: white;
+  &.secondary {
+    /* border: solid 1px var(--b2-color); */
+    background: var(--b3-color);
+    color: var(--g5-color);
+
+    &:hover {
+      background-color: var(--b4-color);
+      color: var(--g2-color);
+      box-shadow: 2px 2px 10px;
+    }
   }
 
+  &:hover {
+    &.event {
+      box-shadow: 2px 2px 10px var(--event-color) !important;
+    }
+
+    &.location {
+      box-shadow: 2px 2px 10px var(--location-color) !important;
+    }
+
+    &.character {
+      box-shadow: 2px 2px 10px var(--character-color) !important;
+    }
+
+    &.story {
+      box-shadow: 2px 2px 10px var(--story-color) !important;
+    }
+  }
 }
 
 .linked-character, .linked-story, .linked-location {
@@ -103,8 +161,8 @@ button{
 
   &:hover {
     text-decoration: underline;
-    text-shadow: #333d29;
-    bottom: var(--g3-color) 3px 3px 10px;
+    text-shadow: var(--g1-color);
+    box-shadow: var(--g3-color) 3px 3px 10px;
   }
 }
 
@@ -114,16 +172,16 @@ button{
 
   &:hover {
     text-decoration: underline;
-    text-shadow: #333d29;
+    text-shadow: var(--g1-color);
     bottom: var(--g3-color) 3px 3px 10px;
   }
 }
 
 .details-button {
-  background: var(--accent-color);
-  color: var(--secondary-color);
+  background: var(--g4-color);
+  color: var(--b2-color);
   font-size: x-small;
-  border: 1px solid var(--primary-color);
+  border: 1px solid var(--g1-color);
   border-radius: 10px;
   padding: 5px;
   margin: 5px;
@@ -132,7 +190,7 @@ button{
 }
 
 .details-button:hover {
-  color: var(--primary-color);
+  color: var(--g1-color);
   background: var(--shadow-color);
   box-shadow: 3px 3px 10px var(--shadow-color);
 }
@@ -145,14 +203,14 @@ input {
 }
 
 label {
-  color: var(--secondary-color);
+  color: var(--b2-color);
   font-weight: bold;
   text-transform: uppercase;
   font-size: 12pt;
 }
 
 .secondary-label {
-  color: var(--primary-color);
+  color: var(--g1-color);
   text-transform: capitalize;
   font-weight: bold;
   font-size: 10pt;
@@ -168,11 +226,11 @@ input[type="checkbox"] {
 textarea, input[type="text"] {
   /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
   display: block;
-  font-size: 10pt;
   background-color: inherit;
   border: none;
   border-bottom: solid .3px;
   margin-bottom: 15px;
+  border-radius: 8px;
 
   font-family: var(--input-font-family);
   
@@ -180,6 +238,7 @@ textarea, input[type="text"] {
     outline: none;
     border-bottom: solid 1px var(--g3-color);
     font-size: small;
+    background-color: var(--b5-color);
   }
 }
 
