--- a/src/app/details/event-details/event-details.html
+++ b/src/app/details/event-details/event-details.html
@@ -6,65 +6,59 @@
         <section class="edit-event-form event-page-body">
             <div class="details-section primary-section horizontal-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-title">Event Title</label>
+                    <label class="primary-label" for="event-title">Title</label>
                     <input id="event-title" type="text" formControlName="eventTitle" />
                 </div>
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-date">Event Date</label>
+                    <label class="primary-label" for="event-date">Date</label>
                     <input id="event-date" type="text" formControlName="eventDate" />
                 </div>
             </div>
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-description">Event Description</label>
+                    <label class="primary-label" for="event-description">Description</label>
                     <textarea id="event-description" class="medium-textarea" formControlName="eventDescription"></textarea>
                 </div>
             </div>
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-location">Event Location</label>
+                    <label class="primary-label" for="event-location">Location</label>
                     <!-- <input id="event-location" type="text" formControlName="eventLocation" /> -->
                     <div class="vertical-section">
                         @for(location of locationList; track location) {
                             <div class="form-field">
                                 <input type="checkbox" id="location-checkbox-{{location.id}}" [value]="location.id" (change)="onLocationChange($event, location)" [checked]="isLocationInEvent(location.name)" />
-                                <button class="linked-location" [routerLink]="['/location-details', location.id]" type="button">
+                                <button class="linked-location" [routerLink]="['/location', location.id]" type="button">
                                     <label class="secondary-label">{{ location.name }}</label>
                                 </button>
                             </div>
                         }
                     </div>
                 </div>
-            </div>
-            
-            <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-stories">Event Stories</label>
+                    <label class="primary-label" for="event-stories">Stories</label>
                     <!-- <input id="event-stories" type="text" formControlName="eventStories" /> -->
                     <div class="vertical-section">
                         @for(story of storyList; track story) {
                             <div class="form-field">
                                 <input type="checkbox" id="story-checkbox-{{story.id}}" [value]="story.id" (change)="onStoryChange($event, story)" [checked]="isStoryInEvent(story.title)" />
-                                <button class="linked-story" [routerLink]="['/story-details', story.id]" type="button">
+                                <button class="linked-story" [routerLink]="['/story', story.id]" type="button">
                                     <label class="secondary-label">{{ story.title }}</label>
                                 </button>
                             </div>
                         }
                     </div>
                 </div>
-            </div>
-            
-            <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-characters">Event Characters</label>
+                    <label class="primary-label" for="event-characters">Characters</label>
                     <!-- <input id="event-characters" type="text" formControlName="eventCharacters" /> -->
                     <div class="vertical-section">
                         @for(character of characterList; track character) {
                             <div class="form-field">
                                 <input type="checkbox" id="character-checkbox-{{character.id}}" [value]="character.id" (change)="onCharacterChange($event, character)" [checked]="isCharacterInEvent(character.firstName + ' ' + character.lastName)" />
-                                <button class="linked-character" [routerLink]="['/character-details', character.id]" type="button">
+                                <button class="linked-character" [routerLink]="['/character', character.id]" type="button">
                                     <label class="secondary-label">{{ character.firstName }} {{ character.lastName }}</label>
                                 </button>
                             </div>
@@ -75,7 +69,7 @@
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-tags">Event Tags</label>
+                    <label class="primary-label" for="event-tags">Tags</label>
                     <textarea class="small-textarea" id="event-tags" formControlName="eventTags"></textarea>
                 </div>
             </div>
