--- a/src/app/details/story-details/story-details.html
+++ b/src/app/details/story-details/story-details.html
@@ -26,7 +26,7 @@
                         @for(character of characterList; track character) {
                             <div class="form-field">
                                 <input type="checkbox" id="character-checkbox-{{character.id}}" [value]="character.id" (change)="onCharacterChange($event, character)" [checked]="isCharacterInStory(character.firstName + ' ' + character.lastName)" />
-                                <button class="linked-character" [routerLink]="['/character-details', character.id]" type="button">
+                                <button class="linked-character" [routerLink]="['/character', character.id]" type="button">
                                     <label class="secondary-label">{{ character.firstName }} {{ character.lastName }}</label>
                                 </button>
                             </div>
@@ -43,7 +43,7 @@
                         @for(location of locationList; track location) {
                             <div class="form-field">
                                 <input type="checkbox" id="location-checkbox-{{location.id}}" [value]="location.id" (change)="onLocationChange($event, location)" [checked]="isLocationInStory(location.name)" />
-                                <button class="linked-location" [routerLink]="['/location-details', location.id]" type="button">
+                                <button class="linked-location" [routerLink]="['/location', location.id]" type="button">
                                     <label class="secondary-label">{{ location.name }}</label>
                                 </button>
                             </div>
