--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,6 +1,6 @@
 <section>
     <form>
-    <input type="text" placeholder="Search" #filter (input)="filterResults(filter.value)"/>
+        <input type="text" placeholder="Search" #filter (input)="filterResults(filter.value)"/>
     <!-- <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button> -->
     </form>
 </section>
@@ -10,8 +10,14 @@
     <button class="primary add-button event" (click)="addWorldElement('event')">Add Event</button>
 </div>
 <div class="home-row">
-    @for(worldEvent of filteredEventList; track $index) {
-        <app-world-event [worldEvent]="worldEvent"></app-world-event>
+    @if (filteredEventList.length) {
+      @for(worldEvent of filteredEventList; track $index) {
+            <app-event-thumbnail [worldEvent]="worldEvent"></app-event-thumbnail>
+      }
+    } @else {
+      <div class="no-results">
+        <p>No events found. Try adjusting your search or add a new event.</p>
+      </div>
     }
 </div>
 </section>
@@ -22,8 +28,14 @@
         <button class="primary add-button location" (click)="addWorldElement('location')">Add Location</button>
     </div>
     <div class="home-row">
-        @for(worldLocation of filteredLocationList; track $index) {
-            <app-world-location [worldLocation]="worldLocation"></app-world-location>
+        @if (filteredLocationList.length) {
+          @for(worldLocation of filteredLocationList; track $index) {
+              <app-location-thumbnail [worldLocation]="worldLocation"></app-location-thumbnail>
+          }
+        } @else {
+          <div class="no-results">
+            <p>No locations found. Try adjusting your search or add a new location.</p>
+          </div>
         }
     </div> 
 </section>
@@ -33,9 +45,15 @@
         <button class="primary add-button character" (click)="addWorldElement('character')">Add Character</button>
     </div>
     <div class="home-row">
-        <!-- Character components would go here -->
-        @for(worldCharacter of filteredCharacterList; track $index) {
-            <app-world-character [worldCharacter]="worldCharacter"></app-world-character>
+        @if (filteredCharacterList.length) {
+          <!-- Character components would go here -->
+          @for(worldCharacter of filteredCharacterList; track $index) {
+              <app-character-thumbnail [worldCharacter]="worldCharacter"></app-character-thumbnail>
+          }
+        } @else {
+          <div class="no-results">
+            <p>No characters found. Try adjusting your search or add a new character.</p>
+          </div>
         }
     </div>
 </section>
@@ -46,9 +64,15 @@
         <button class="primary add-button story" (click)="addWorldElement('story')">Add Story</button>
     </div>
     <div class="home-row">
-        <!-- Story components would go here -->
-        @for(worldStory of filteredStoryList; track $index) {
-            <app-world-story [worldStory]="worldStory"></app-world-story>
+        @if (filteredStoryList.length) {
+          <!-- Story components would go here -->
+          @for(worldStory of filteredStoryList; track $index) {
+              <app-story-thumbnail [worldStory]="worldStory"></app-story-thumbnail>
+          }
+        } @else {
+          <div class="no-results">
+            <p>No stories found. Try adjusting your search or add a new story.</p>
+          </div>
         }
     </div>
 </section>
