--- a/src/styles.css
+++ b/src/styles.css
@@ -111,7 +111,7 @@ button{
   border: none;
   border-radius: 8px;
   padding: 5px;
-  transition: box-shadow 0.5s ease-in-out, background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
 
   &.primary {
     /* border: solid 1px var(--g1-color); */
@@ -132,7 +132,7 @@ button{
     &:hover {
       background-color: var(--b4-color);
       color: var(--g2-color);
-      box-shadow: 2px 2px 10px;
+      /* box-shadow: 2px 2px 10px; */
     }
   }
 
@@ -158,6 +158,7 @@ button{
 .linked-character, .linked-story, .linked-location {
   border: 0px;
   background-color: inherit;
+  transition: all 0.3s ease-in-out; 
 
   &:hover {
     text-decoration: underline;
@@ -177,29 +178,12 @@ button{
   }
 }
 
-.details-button {
-  background: var(--g4-color);
-  color: var(--b2-color);
-  font-size: x-small;
-  border: 1px solid var(--g1-color);
-  border-radius: 10px;
-  padding: 5px;
-  margin: 5px;
-  transition: box-shadow 0.5s ease-in-out, background-color 0.5s ease-in-out, color 0.5s ease-in-out;
-  /* cursor: pointer; */
-}
-
-.details-button:hover {
-  color: var(--g1-color);
-  background: var(--shadow-color);
-  box-shadow: 3px 3px 10px var(--shadow-color);
-}
-
 /* ============================================================================
    FORM ELEMENTS
    ============================================================================ */
 input {
   display: block;
+  font-family: var(--input-font-family);
 }
 
 label {
@@ -207,6 +191,23 @@ label {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 12pt;
+
+  &.required::after {
+    content: " *";
+    color: red;
+  }
+}
+
+.primary-label {
+  color: var(--b2-color);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 12pt;
+}
+
+.primary-label.required::after {
+  content: " *";
+  color: var(--bright-red);
 }
 
 .secondary-label {
@@ -221,22 +222,31 @@ input[type="checkbox"] {
   width: fit-content;
   margin-left: 10px;
   margin-right: 5px;
+  border-radius: 15px;
+  transition: all 0.3s ease;
+
+  &:checked {
+    accent-color: var(--g3-color);
+  }
 }
 
 textarea, input[type="text"] {
-  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
   display: block;
   background-color: inherit;
   border: none;
-  border-bottom: solid .3px;
+  border-bottom: solid 1px var(--g3-color);
   margin-bottom: 15px;
   border-radius: 8px;
 
   font-family: var(--input-font-family);
   
+  &::placeholder {
+    font-size: small;
+    opacity: 1; /* Firefox */
+  }
+
   &:focus {
     outline: none;
-    border-bottom: solid 1px var(--g3-color);
     font-size: small;
     background-color: var(--b5-color);
   }
@@ -244,7 +254,13 @@ textarea, input[type="text"] {
 
 input[type="text"] {
   padding: 10px;
-  width: 300px;  
+  width: 300px;
+
+  &:required::after {
+    content: "*";
+    color: red;
+    margin-left: 5px;
+  }
 }
 
 textarea {
@@ -272,6 +288,14 @@ textarea {
 .form-field {
   display: flex;
   width: fit-content;
+}
+
+.search-input {
+  width: 250px;
+  outline: none;
+  /* font-size: small; */
+  /* background-color: var(--b5-color); */
+  background-color: red;
 }
 
 /* ============================================================================
@@ -309,26 +333,30 @@ textarea {
   padding: 10px 15px;
   border: none;
   border-radius: 8px;
-  font-size: 1rem;
   cursor: pointer;
-  transition: box-shadow 0.5s ease-in-out, background-color 0.5s ease-in-out;
 /* Floating */
   position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: var(--g2-color);
-    color: white;
-    padding: 15px 20px;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    z-index: 1000; /* Ensure it stays on top */
+  bottom: 20px;
+  right: 20px;
+  background-color: var(--g2-color);
+  padding: 10px;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000; /* Ensure it stays on top */
+  transition: all 0.3s ease;
 /* end floating */
   &:hover {
     box-shadow: var(--shadow-color) 2px 2px 10px;
     background-color: var(--g3-color);
   }
+
+  &:active {
+    /* background-color: var(--g5-color); */
+    background: radial-gradient(var(--g5-color), var(--g4-color));
+  }
+
 } 
 
 /* ============================================================================
@@ -363,9 +391,9 @@ textarea {
 }
 
 .spanning-section {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
-  flex-direction: column;
+  width: 100%;
 }
 
 .grid-section {
