--- a/src/app/pages/event-home/event-home.html
+++ b/src/app/pages/event-home/event-home.html
@@ -1,10 +1,10 @@
 <article>
-  <h1>Event Timeline</h1>
+  <h1>Timeline</h1>
   <section class="filter-section">
     <label for="filter">Search events</label>
     <input type="text" class="search-input" placeholder="Search" #filter (input)="filterResults(filter.value)"/>
-    <button class="primary add-button" (click)="addWorldEvent()">Add Event</button>
   </section>
+  <button class="primary add-button" (click)="addWorldEvent()">Add Event</button>
 
   <section class="results">
     @if (filteredEventList.length) {
