--- a/src/app/thumbnail/character-thumbnail/character-thumbnail.html
+++ b/src/app/thumbnail/character-thumbnail/character-thumbnail.html
@@ -9,7 +9,7 @@
     </div>
     <div class="thumbnail-tag-container">
     @for (tag of worldCharacter().tags; track tag) {
-        <div class="world-tags">{{ tag }}</div>
+        <div class="thumbnail-tags">{{ tag }}</div>
     }
     </div>
 </div>
