--- a/src/app/thumbnail/location-thumbnail/location-thumbnail.html
+++ b/src/app/thumbnail/location-thumbnail/location-thumbnail.html
@@ -8,7 +8,7 @@
     </div>
     <div class="thumbnail-tag-container">
     @for (tag of worldLocation().tags; track tag) {
-        <div class="world-tags">{{ tag }}</div>
+        <div class="thumbnail-tags">{{ tag }}</div>
     }
     </div>
 </div>
